Fixed "recently played" items image not showing

--- a/mopidy_mfe/www/app.css
+++ b/mopidy_mfe/www/app.css
@@ -44,14 +44,14 @@
 	width: 100%;
 	height: 100%
 	text-align: left;
-	padding-left: 5px
+	//padding-left: 5px;
 }
 .boxCenter2 {
 	width: 100%;
 	height: 100%;
 	text-align: left;
-	padding-left: 5px
-	color: green;
+	//padding-left: 5px;
+	color: lightgreen;
 }
 .boxCenter2 h1 {
 	color: green !important;
